--- a/index.html
+++ b/index.html
@@ -2,21 +2,19 @@
 <html>
 <head>
 <meta charset="utf-8"> 
-<title>HELLO</title> 
-<style>
-#home {
-    background-image: linear-gradient(#e66465, #9198e5);
-    background-attachment:fixed;
-    background-repeat:no-repeat;
-    background-size:cover;
-    -moz-background-size:cover;
-    -webkit-background-size:cover;
-}
-</style>
+<title>LOADING</title> 
 </head>
-<body id="home">
+<body>
 
-<div></div>
+<div class="text-content">
+  <span class="letter">L</span>
+  <span class="letter">O</span>
+  <span class="letter">A</span>
+  <span class="letter">D</span>
+  <span class="letter">I</span>
+  <span class="letter">N</span>
+  <span class="letter">G</span>
+</div>
 
 </body>
 </html>
