--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8"> 
 <title>LOADING</title> 
 <link rel="stylesheet" type="text/css" href=".index.css">
+<script type="text/javascript" src=".index.js"></script>
 </head>
 <body>
 
