--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
 <meta charset="utf-8"> 
 <title>LOADING</title> 
 <link rel="stylesheet" type="text/css" href=".index.css">
-<script type="text/javascript" src=".index.js"></script>
+
 </head>
 <body>
 
-<div class="text-content">
-  <span class="letter">L</span>
-  <span class="letter">O</span>
-  <span class="letter">A</span>
-  <span class="letter">D</span>
-  <span class="letter">I</span>
-  <span class="letter">N</span>
-  <span class="letter">G</span>
+<div id="main">
+    <h1>something</h1>
+    <div class="content">
+        <p>You can press <kbd>▲</kbd> <kbd>▼</kbd> on your keyboard or swipe up/down to navigate. Mouse wheel works too.</p>
+        <p><a href="https://codepen.io/theseventh" target="_blank">codepen</a> // <a href="https://twitter.com/the_seventh_kek" target="_blank">twitter</a>
+    </div>
+    <div class="buttons">
+        <button class="next" onclick="go(-1)"></button>
+        <button class="prev" onclick="go(1)"></button>
+    </div>
 </div>
 
 </body>
