--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8"> 
-<title>LOADING</title> 
+<title>HELLO</title> 
 <style type="text/css">
   html, body {
   padding: 0;
