--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>HELLO</h1>
     <div class="content">
         <p>You can press <kbd>▲</kbd> <kbd>▼</kbd> on your keyboard or swipe up/down to navigate. Mouse wheel works too.</p>
-        <p><a href="" target="_blank">More</a> // <a href="" target="_blank">About</a>
+        <p><a href="./more.html" target="_blank">More</a> // <a href="./about.html" target="_blank">About</a>
     </div>
     <div class="buttons">
         <button class="next" onclick="go(-1)"></button>
